# youtube-playlist-copier

./: .gitignore  README.md  credentials.json  main.py  pyproject.toml  requirements.txt
config/: config_alter.json  config_dust.json
